--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,3 +6,7 @@ Description: A set of helper functions to manipulate outbreak data in preparatio
 Depends: R (>= 3.1.2)
 License: CC0
 LazyData: true
+Imports:
+  dplyr,
+  assertthat,
+  ggmap
