--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,5 @@ export(test_lat)
 export(test_long)
 import(dplyr)
 importFrom(assertthat,assert_that)
+importFrom(assertthat,not_empty)
 importFrom(ggmap,geocode)
