--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,8 @@ Description: A set of helper functions to manipulate outbreak data in preparatio
 Depends: R (>= 3.1.2)
 License: CC0
 LazyData: true
-Imports:
+Imports: 
   dplyr,
   assertthat,
   ggmap
+Suggests: testthat
