--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(md_geocoder)
 export(test_lat)
 export(test_long)
 import(dplyr)
+import(lubridate)
 importFrom(assertthat,assert_that)
 importFrom(assertthat,not_empty)
 importFrom(ggmap,geocode)
