Updated docs, fixed up agg_summaries

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,10 +8,17 @@ export(test_lat)
 export(test_long)
 import(assertthat)
 import(dplyr)
-import(lubridate)
 import(maptools)
 import(sp)
 importFrom(assertthat,assert_that)
 importFrom(assertthat,not_empty)
 importFrom(ggmap,geocode)
 importFrom(lazyeval,interp)
+importFrom(lubridate,dmy)
+importFrom(lubridate,dmy_h)
+importFrom(lubridate,dmy_hm)
+importFrom(lubridate,dmy_hms)
+importFrom(lubridate,mdy)
+importFrom(lubridate,mdy_h)
+importFrom(lubridate,mdy_hm)
+importFrom(lubridate,mdy_hms)
