--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,13 @@
-# Sample .travis.yml for R projects from https://github.com/craigcitro/r-travis
-
 language: c
-
-before_install:
-  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
-  - chmod 755 ./travis-tool.sh
-  - ./travis-tool.sh bootstrap
-
-install:
-  - ./travis-tool.sh install_deps
-
-script: ./travis-tool.sh run_tests
+script: "./travis-tool.sh run_tests"
+before_script:
+- curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
+- chmod 755 ./travis-tool.sh
+- sudo apt-get update -qq
+- sudo apt-get install -y gdal-bin libgdal-dev libgdal1-dev netcdf-bin libproj-dev libgdal1h
+- "./travis-tool.sh bootstrap"
+- "./travis-tool.sh install_deps"
+- "./travis-tool.sh install_r rjson leafletR ecoengine ggmap"
 
 after_failure:
   - ./travis-tool.sh dump_logs
