Added Hmisc to namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,9 +8,17 @@ export(md_geocoder)
 export(sanitize_text)
 export(test_lat)
 export(test_long)
+import(Calculate)
+import(Hmisc)
+import(aggregation)
 import(dplyr)
+import(each)
 import(maptools)
+import(of)
+import(prevalence)
+import(region)
 import(sp)
+import(within)
 importFrom(assertthat,assert_that)
 importFrom(assertthat,not_empty)
 importFrom(ggmap,geocode)
