--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(agg_summaries)
 export(area_id)
 export(calculate_prevalence)
+export(calculate_stratified_prevalence)
 export(fix_dates)
 export(md_geocoder)
 export(sanitize_text)
