--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,16 @@
 export(agg_summaries)
 export(area_id)
 export(calculate_prevalence)
+export(calculate_prevalence_unusual_pval)
 export(calculate_stratified_prevalence)
+export(density_data)
+export(estimate_density)
 export(fix_dates)
 export(md_geocoder)
 export(sanitize_text)
 export(test_lat)
 export(test_long)
+export(unusual_prevalence_region)
 import(Hmisc)
 import(dplyr)
 import(maptools)
